Implemented playlist download functionality